<!--
  ~ Copyright (c) 2020. komamj
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">仓库管理</string>

    <!--login-->
    <string name="systemTitle">科伦药业仓库管理系统</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_in">登录</string>
    <string name="login_system">设置</string>
    <string name="login_system_change">环境切换</string>
    <string name="title_activity_login">登录</string>
    <!--setting-->
    <string name="factoryPromptTitle">Factory</string>
    <string name="stockLocationPromptTitle">Stock location</string>
    <string name="action_settings">设置</string>

    <string name="shelving">入库上架</string>
    <string name="finished_products">成品上架</string>
    <string name="take_off">出库下架</string>
    <string name="out_of_stock">有预留出库</string>
    <string name="no_reserved_outbound">无预留出库</string>
    <string name="warehouse_inventory">仓库盘点</string>
    <string name="warehouse_inventory_search">盘点查询</string>
    <string name="warehouse_inventory_bright_disk">盘点</string>
    <string name="position_movement">仓位移动</string>
    <string name="inventory_check">库存查询</string>
    <string name="switch_stock_locations">切换库存地</string>
    <string name="exit">退出</string>
    <string name="search">查询</string>
    <string name="materials_search">物料查询</string>
    <string name="employee_search">员工查询</string>
    <string name="internal_order_search">内部订单查询</string>

    <!--shelving-->
    <string name="order_number">单据编号</string>
    <string name="query">查询</string>
    <string name="material_document_hint">请输入物料凭证</string>
    <string name="source_unit_hint">请输入来源单位</string>
    <string name="source_unit">来源单位</string>
    <string name="date">单据日期</string>
    <string name="creator">创建人</string>
    <string name="date_hint">请输入日期</string>
    <string name="item_number">物料编号</string>
    <string name="common_name">通用名称</string>

    <!--FinishedProduct-->
    <string name="material_coding">物料编码</string>
    <string name="batch_number">批次号</string>

    <!--Detail-->
    <string name="on_shelving_detail">上架详情</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <!--take off-->
    <string name="task_number">任务号</string>
    <string name="receiving_department">领用部门</string>
    <string name="document_date">单据日期</string>
    <string name="specification">规格</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="stockLocationExample">2100 - 科伦药物研究院</string>

    <!-- Preference Titles -->
    <string name="interface_settings_header">接口设置</string>
    <string name="business_settings_header">业务设置</string>

    <!-- Interface Preferences -->
    <string name="sap_interface_address_title">SAP接口地址</string>
    <string name="pda_interface_address_title">PDA接口地址</string>
    <string name="printer_name_title">打印机名</string>

    <!-- Business Preferences -->
    <string name="display_mergebox_title">显示合箱</string>
    <string name="display_mergebox_summary">显示合箱在业务面板</string>
    <string name="hybrid_storage_strategy">混批存放策略</string>
    <string name="inventory_method_title">盘点方法</string>
    <string name="inventory_header">盘点设置</string>
    <string name="hybrid_storage_title">混批存放</string>
    <string name="basic_order">基本单位</string>

    <!--out of stock-->
    <string name="document_number">单据编号</string>
    <string name="movement_type">移动类型</string>
    <string name="cost_center">成本中心</string>
    <string name="internal_order">内部订单</string>
    <string name="employer">领用人</string>
    <string name="harvest">收货地</string>
    <string name="remark">备注</string>

    <!--warehouse-->
    <string name="voucher_number">凭证号</string>
    <string name="material_name">物料名称</string>
    <string name="demand">需求量</string>
    <string name="unit">单位</string>
    <string name="picked_quantity">已拣数量</string>
    <string name="cargo_space">仓位</string>

    <string name="material_description">物料描述</string>

    <string name="out">出库</string>
    <string name="in">拣货</string>
    <string name="employee_code">员工编码</string>
    <string name="employee_name">员工姓名</string>
    <string name="department_code">部门编码</string>
    <string name="department_name">部门名称</string>
    <string name="internal_order_number">订单号</string>
    <string name="description">描述</string>
    <string name="factory">工厂</string>
    <string name="material_batch_number">物料批次</string>
    <string name="shelving_quantity">上架数量</string>
    <string name="main_quantity">主数量</string>
    <string name="auxiliary_quantity">辅数量</string>

    <string name="deliver_quantity">下架数量</string>
    <string name="on_deliver_detail">下架详情</string>

    <string name="material_number">数量</string>
    <string name="supplier_name">供应商</string>

    <string name="supplier_batch">供应商批次</string>
    <string name="sold_position">下架仓位</string>
    <string name="put_position">上架仓位</string>
    <string name="submit">提交</string>

    <!--StockMaterial-->
    <string name="material_detail">请输入查询参数</string>
    <string name="reserved_out_bound_detail">预留明细</string>

    <!--盘点-->
    <string name="warehouse_number">凭证记录号</string>
    <string name="position">仓位</string>
    <string name="Material_number">数量</string>
    <string name="business_type_title">业务类型</string>
    <string name="sap_interface_account_title">SAP接口账户</string>
    <string name="sap_interface_password_title">SAP接口密码</string>
    <string name="no_reserved_out_bound_details">出库明细</string>
    <string name="title_activity_no_reserved_out_bound_detail">出库信息</string>
    <string name="order_number_hint">单据号</string>


</resources>
