<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBarLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:ignore="MissingConstraints">

	</com.google.android.material.appbar.AppBarLayout>

	<TextView
		android:id="@+id/systemTitleTv"
		android:layout_width="0dp"
		android:layout_height="27dp"
		android:layout_marginStart="24dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="24dp"
		android:text="@string/systemTitle"
		android:textAlignment="center"
		android:textColor="@color/colorPrimary"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toolbar" />

	<EditText
		android:id="@+id/username"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="24dp"
		android:drawableLeft="@drawable/ic_android_user"
		android:hint="@string/prompt_username"
		android:importantForAutofill="no"
		android:inputType="text"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/systemTitleTv" />

	<EditText
		android:id="@+id/password"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="24dp"
		android:drawableLeft="@drawable/ic_android_password"
		android:hint="@string/prompt_password"
		android:imeActionLabel="@string/action_sign_in_short"
		android:imeOptions="actionDone"
		android:importantForAutofill="no"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/username" />

	<Spinner
		android:id="@+id/factorySp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="24dp"
		style="@style/Widget.AppCompat.Spinner.Underlined"
		android:prompt="@string/factoryPromptTitle"
		android:spinnerMode="dropdown"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/password" />

	<Spinner
		android:id="@+id/stockLocationSp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="24dp"
		style="@style/Widget.AppCompat.Spinner.Underlined"
		android:prompt="@string/stockLocationPromptTitle"
		android:spinnerMode="dropdown"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/factorySp"/>

	<Button
		android:id="@+id/loginBt"
		style="@style/PrimaryButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="48dp"
		android:layout_marginTop="40dp"
		android:layout_marginEnd="48dp"
		android:enabled="false"
		android:text="@string/action_sign_in"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/stockLocationSp" />


	<ProgressBar
		android:id="@+id/loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginStart="32dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="32dp"
		android:layout_marginBottom="64dp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.3" />

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="-8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>