<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. komamj
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dp_8"
    android:paddingTop="@dimen/dp_8"
    android:paddingEnd="@dimen/dp_8"
    android:paddingBottom="@dimen/dp_8"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/tv_shelving"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_move_to_inbox_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/shelving"
        app:layout_constraintEnd_toStartOf="@id/tv_finished_products"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_finished_products"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_move_to_inbox_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/finished_products"
        app:layout_constraintBottom_toBottomOf="@id/tv_shelving"
        app:layout_constraintEnd_toStartOf="@id/tv_take_off"
        app:layout_constraintStart_toEndOf="@id/tv_shelving"
        app:layout_constraintTop_toTopOf="@id/tv_shelving" />

    <TextView
        android:id="@+id/tv_take_off"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_store_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/take_off"
        app:layout_constraintBottom_toBottomOf="@id/tv_shelving"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_finished_products"
        app:layout_constraintTop_toTopOf="@id/tv_shelving" />

    <TextView
        android:id="@+id/tv_out_of_stock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_store_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/out_of_stock"
        app:layout_constraintEnd_toStartOf="@id/tv_no_reserved_outbound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_shelving" />

    <TextView
        android:id="@+id/tv_no_reserved_outbound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_store_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/no_reserved_outbound"
        app:layout_constraintBottom_toBottomOf="@id/tv_out_of_stock"
        app:layout_constraintEnd_toStartOf="@id/tv_warehouse_inventory"
        app:layout_constraintStart_toEndOf="@id/tv_out_of_stock"
        app:layout_constraintTop_toTopOf="@id/tv_out_of_stock" />

    <TextView
        android:id="@+id/tv_warehouse_inventory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_store_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/warehouse_inventory"
        app:layout_constraintBottom_toBottomOf="@id/tv_out_of_stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_no_reserved_outbound"
        app:layout_constraintTop_toTopOf="@id/tv_out_of_stock" />

    <TextView
        android:id="@+id/tv_position_movement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_store_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/position_movement"
        app:layout_constraintEnd_toStartOf="@id/tv_inventory_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_out_of_stock" />

    <TextView
        android:id="@+id/tv_inventory_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_store_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/inventory_check"
        app:layout_constraintBottom_toBottomOf="@id/tv_position_movement"
        app:layout_constraintEnd_toEndOf="@id/tv_switch_stock_locations"
        app:layout_constraintStart_toEndOf="@id/tv_position_movement"
        app:layout_constraintTop_toTopOf="@id/tv_position_movement" />

    <TextView
        android:id="@+id/tv_switch_stock_locations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_drag_handle_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/switch_stock_locations"
        app:layout_constraintBottom_toBottomOf="@id/tv_position_movement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_inventory_check"
        app:layout_constraintTop_toTopOf="@id/tv_position_movement" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:background="?android:selectableItemBackground"
        android:drawableTop="@drawable/ic_exit_to_app_black_24dp"
        android:drawablePadding="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="@id/tv_position_movement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_position_movement" />

</androidx.constraintlayout.widget.ConstraintLayout>
