<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. komamj
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_4"
    android:layout_marginStart="@dimen/dp_2"
    android:layout_marginTop="@dimen/dp_1"
    android:layout_marginEnd="@dimen/dp_2"
    app:cardElevation="@dimen/dp_4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:paddingStart="@dimen/dp_4"
        android:paddingTop="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4"
        android:paddingBottom="@dimen/dp_4">

        <TextView
            android:id="@+id/tv_employee_code_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/employee_code"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_employee_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:gravity="start|center"
            android:text="000001232323"
            app:layout_constraintBottom_toBottomOf="@id/tv_employee_code_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_employee_code_description"
            app:layout_constraintTop_toTopOf="@id/tv_employee_code_description" />

        <TextView
            android:id="@+id/tv_employee_name_description"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="start|center"
            android:text="@string/employee_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_employee_code_description" />

        <TextView
            android:id="@+id/tv_employee_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:gravity="start|center"
            android:text="田家成"
            app:layout_constraintBottom_toBottomOf="@id/tv_employee_name_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_employee_name_description"
            app:layout_constraintTop_toTopOf="@id/tv_employee_name_description" />

        <TextView
            android:id="@+id/tv_department_code_description"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="start|center"
            android:text="@string/department_code"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dp_14"
            app:layout_constraintEnd_toEndOf="@id/tv_employee_code_description"
            app:layout_constraintTop_toBottomOf="@id/tv_employee_name_description" />

        <TextView
            android:id="@+id/tv_department_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:gravity="start|center"
            android:text="001"
            app:layout_constraintBottom_toBottomOf="@id/tv_department_code_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_department_code_description"
            app:layout_constraintTop_toTopOf="@id/tv_department_code_description" />

        <TextView
            android:id="@+id/tv_department_name_description"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="start|center"
            android:text="@string/department_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dp_14"
            app:layout_constraintEnd_toEndOf="@id/tv_employee_code_description"
            app:layout_constraintTop_toBottomOf="@id/tv_department_code_description" />

        <TextView
            android:id="@+id/tv_department_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:gravity="start|center"
            android:text="IT部门"
            app:layout_constraintBottom_toBottomOf="@id/tv_department_name_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_department_name_description"
            app:layout_constraintTop_toTopOf="@id/tv_department_name_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>